# luatos-soc-idf5

./: .gitignore  LICENSE  README.md
.github/workflows/: sync_from_gitee.yml
cloudbuild/: esp32c2-idf5.meta.json  esp32c3-idf5.meta.json  esp32s3-idf5.meta.json
luatos/: CMakeLists.txt  build.bat  build_c3.bat  makesoc.py  partitions.16m.csv  partitions.16m_1mscript.csv  partitions.16m_8mscript.csv  partitions.2m.csv  partitions.4m.csv  partitions.4m_1mfs.csv  partitions.4m_2mfs.csv  partitions.8m.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
luatos/components/luat/: CMakeLists.txt
luatos/components/luat/ble/: luat_nimble_idf5.c
luatos/components/luat/legacy/: luat_lib_mqtt.c
luatos/components/luat/port/: luat_adc_idf5.c  luat_base_idf5.c  luat_crypto_idf5.c  luat_flash_idf5.c  luat_fs_idf5.c  luat_gpio_idf5.c  luat_httpsrv_idf5.c  luat_i2c_idf5.c  luat_lib_http.c  luat_lib_mqtt.c  luat_lib_nimble.c  luat_log_idf5.c  luat_lwip_idf5.c  luat_malloc_idf5.c  luat_mcu_idf5.c  luat_msgbus_idf5.c  luat_network_idf5.c  luat_nimble_gatt_svr.c  luat_nimble_idf5.c  luat_ota_idf5.c  luat_pm_idf5.c  luat_pwm_idf5.c  luat_rtc_idf5.c  luat_rtos_idf5.c  luat_sfd_idf5_onchip.c  luat_shell_idf5.c  luat_sntp_idf5.c  luat_spi_idf5.c  luat_timer_idf5.c  luat_uart_idf5.c  luat_wdt_idf5.c  luat_wlan_idf5.c
luatos/include/: blehr_sens.h  idf5_io_def.h  luat_conf_bsp.h  net_lwip.h  platform_def.h
luatos/main/: CMakeLists.txt  idf5_main.c  smartconfig_main.c
luatos/pack/: info.json
luatos/release/: readme.txt
